who, need, activities and banner

--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -5,10 +5,14 @@
   align-items: flex-end;
   background-position: bottom !important;
   // background: linear-gradient(270deg, rgba(0, 0, 0, 0.308) 100%, rgba(255, 255, 255, 0) 108.12%);
-  h1 {
+  div {
     color: white;
     margin: 70px 30px;
     font-weight: 600;
+  }
+  p {
+    font-weight: 500;
+    text-align: right;
   }
 }
 
