--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,23 +1,12 @@
-// .button-primary {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   // background-color: $button-blue;
-//   // border-color: $button-blue;
-//   color: $white;
-//   box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
-//   font-size: 15px;
-//   text-shadow: none;
-//   height: 40px;
-//   &:hover {
-//     background-color: #007bff;
-//     border-color: #007bff;
-//     color: $white;
-//   }
-// }
+.btn-geoness-container {
+  width: 100%;
+  text-align:center;
+}
 
-// @media(max-width: 767px) {
-//   .button-primary {
-//     margin: 30px 0;
-//   }
-// }
+.btn-geoness {
+  background-color: $brand-color;
+  color: white;
+  &:hover {
+    opacity: 0.9;
+  }
+}
