change photos banner

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -10,3 +10,15 @@
     opacity: 0.9;
   }
 }
+
+.btn-cv {
+  position: absolute;
+  right: 40px;
+  top: -16px;
+
+  width: 110px;
+  a {
+    margin:0;
+    width: 110px;
+  }
+}
