modifs poost-call v1

--- a/src/styles/components/_who.scss
+++ b/src/styles/components/_who.scss
@@ -1,6 +1,6 @@
 .who {
   background-color: rgba(220,217,197, 0.3);
-  min-height: 80vh;
+  // min-height: 80vh;
   position: relative;
   display: flex;
   flex-direction: column;
