--- a/src/styles/components/_activities.scss
+++ b/src/styles/components/_activities.scss
@@ -1,6 +1,6 @@
 .activities {
   background-color: rgba(220,217,197, 0.3);
-  min-height: 80vh;
+  // min-height: 80vh;
   display: flex;
   flex-direction: column;
   h2 {
