--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -1,5 +1,5 @@
 .slider-image {
-  height: calc(100vh);
+  height: 80vh;
   display: flex !important;
   justify-content: flex-start;
   align-items: flex-end;
@@ -7,7 +7,7 @@
   // background: linear-gradient(270deg, rgba(0, 0, 0, 0.308) 100%, rgba(255, 255, 255, 0) 108.12%);
   div {
     color: white;
-    margin: 70px 30px;
+    margin: 30px;
     font-weight: 600;
   }
   p {
@@ -26,10 +26,10 @@
     opacity: 0.9;
   }
   h1 {
-    margin-left: 20%;
+    margin-left: 10%;
     margin-bottom: 0;
     text-align: left;
-    font-size: 26px;
+    font-size: 22px !important;
     color: $brand-brown;
     line-height: 45px;
     font-weight: 600;
