--- a/src/styles/components/_team.scss
+++ b/src/styles/components/_team.scss
@@ -16,6 +16,7 @@
     display: flex;
     .team-card-content {
       position: relative;
+      margin: 40px 0;
     }
     h3 {
       font-weight: 600;
@@ -43,4 +44,19 @@
       }
     }
   }
+  .team-limit {
+    height: 1px;
+    width: 80%;
+    background-color: $brand-brown;
+    margin: auto;
+    margin-bottom: 20px;
+  }
+}
+
+.team-2-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 500px;
 }
