Responsiveness all screens

--- a/src/styles/components/_activities.scss
+++ b/src/styles/components/_activities.scss
@@ -30,7 +30,8 @@
     align-items: center;
     flex-wrap: wrap;
     width: 100vw;
-    margin-bottom: 30px;
+    max-width: 1400px;
+    margin: auto;
   }
   .activity-card {
     background-color: white;
@@ -38,7 +39,7 @@
     width: 365px;
     min-width: 350px;
     height: 540px;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
     border: solid $brand-brown 2px;
     h3 {
       padding-top: 10px;
