--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -29,10 +29,50 @@
     margin-left: 13%;
     margin-bottom: 0;
     text-align: left;
-    font-size: 22px !important;
+    font-size: 22px;
     color: $brand-brown;
     line-height: 45px;
     font-weight: 600;
   }
 }
 
+@media(max-width: 1200px) {
+  .surbanner {
+    height: auto;
+    min-height: 90px;
+    h1 {
+      font-size: 18px;
+      line-height: 35px;
+    }
+  }
+}
+
+@media(max-width: 996px) {
+  .surbanner h1 {
+    font-size: 16px;
+  }
+}
+
+@media(max-width: 850px) {
+  .surbanner h1 {
+    font-size: 14px;
+  }
+  .slider-image h1 {
+    text-align: left;
+  }
+}
+
+@media(max-width: 767px) {
+  .surbanner {
+    display: none;
+  }
+  .slider-image h1 {
+    font-size: 26px;
+  }
+}
+
+@media(max-width: 400px) {
+  .slider-image h1 {
+    font-size: 21px;
+  }
+}
