--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -34,3 +34,65 @@
     margin-right: 15px;
   }
 }
+
+@media(max-width: 1100px) {
+  .footer .footer-logo {
+    margin-left: 8%;
+  }
+}
+
+@media(max-width: 920px) {
+  .footer .footer-logo {
+    margin-left: 3%;
+    .gatsby-image-wrapper {
+      width: 300px !important;
+      img {
+        width: 300px !important;
+      }
+    }
+  }
+}
+
+@media(max-width: 767px) {
+  .footer .footer-logo {
+    .gatsby-image-wrapper {
+      width: 250px !important;
+      img {
+        width: 250px !important;
+      }
+    }
+  }
+  .footer-content p {
+    font-size: 15px;
+  }
+  #footer .footer-wrapper {
+    background-image: none !important;
+    background-color: $brand-color !important;
+  }
+}
+
+@media(max-width: 767px) {
+  #footer .footer-wrapper {
+    flex-direction: column;
+  }
+  .footer .footer-logo {
+    .gatsby-image-wrapper {
+      width: 300px !important;
+      img {
+        width: 300px !important;
+      }
+    }
+  }
+  #footer {
+    height: auto;
+    .background-footer {
+      height: auto !important;
+    }
+  }
+}
+@media(max-width: 420px) {
+  .footer-content {
+    flex-direction: column;
+    height: auto !important;
+  }
+}
