--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -17,7 +17,7 @@
   width: 70vw;
   position: absolute;
   background-color: $brand-color;
-  top: 100px;
+  top: 80px;
   right: 0;
   display:none;
   a {
@@ -138,25 +138,44 @@ a {
   transform: rotate(-135deg);
 }
 
+@media(max-width: 1200px) {
+  a {
+    .header-logo {
+      margin-left: 15px;
+      .gatsby-image-wrapper {
+        width: 300px;
+      }
+    }
+  }
+  .header-links a {
+    font-size: 14px;
+  }
+}
+
+@media(max-width: 996px) {
+  .header {
+    padding: 0 1%;
+    a {
+      text-align: center;
+      .header-logo {
+        margin-left: 10px;
+        .gatsby-image-wrapper {
+          width: 250px;
+        }
+      }
+    }
+    .header-links a {
+      font-size: 14px;
+    }
+  }
+}
+
 @media(max-width: 767px) {
   #nav-icon1 {
     display: block;
   }
   .header-links {
     display: none;
-  }
-}
-
-@media(max-width: 400px) {
-  a {
-    .header-logo {
-      img {
-        height: 70%;
-      }
-      .gatsby-image-wrapper {
-        margin-top: 6px;
-      }
-    }
   }
   #nav-icon1 span {
     height: 4px;
@@ -174,5 +193,34 @@ a {
   }
   #nav-icon1.open span:nth-child(3) {
     top: 13px;
+  }
+}
+
+@media(max-width: 400px) {
+  a {
+    .header-logo {
+      img {
+        height: 70%;
+      }
+      .gatsby-image-wrapper {
+        margin-top: 6px;
+      }
+    }
+  }
+
+  .navbar-collapse {
+    width: 100vw;
+  }
+  .header {
+    a {
+      .header-logo {
+        .gatsby-image-wrapper {
+          width: 220px;
+        }
+      }
+    }
+  }
+  #nav-icon1 {
+    margin: 0px;
   }
 }
