--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -7,6 +7,7 @@
 @import 'need';
 @import 'activities';
 @import 'team';
+@import 'mentions';
 
 #who, #need, #activities, #team {
   padding-top: 80px;
