Last modifs front and content  ven 18.09

--- a/src/styles/components/_need.scss
+++ b/src/styles/components/_need.scss
@@ -36,6 +36,11 @@
       list-style-type: none;
     }
   }
+  .asset-list {
+    li {
+      list-style-type: disc;
+    }
+  }
   .fontawesome-icons {
     margin-left: 20px;
     font-size: 32px;
