--- a/src/styles/config/_colors.scss
+++ b/src/styles/config/_colors.scss
@@ -3,6 +3,10 @@ $brand-brown: #381E00;
 $brand-darkgreen: #4D524A;
 $brand-green: #A0AB9A;
 
+$brand-blue: #017BAF;
+$brand-yellow: #FFDC00;
+$button-blue: #6E98E7;
+
 $light-grey: #f9f9f9;
 $dark-grey: #5E6476;
 $white: white;
