--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -1,71 +1,20 @@
 .slider-image {
-  height: 80vh;
+  height: 99vh;
   display: flex !important;
-  justify-content: flex-start;
-  align-items: flex-end;
-  background-position: bottom !important;
-  // background: linear-gradient(270deg, rgba(0, 0, 0, 0.308) 100%, rgba(255, 255, 255, 0) 108.12%);
-  div {
-    color: white;
-    margin: 30px;
-    font-weight: 600;
-  }
-  p {
-    font-weight: 500;
-    text-align: right;
-  }
-}
-
-.surbanner {
-  position: absolute !important;
-  z-index: 1;
-  height: 120px;
-  display: flex;
+  justify-content: center;
   align-items: center;
-  &::before {
-    opacity: 0.9;
-  }
   h1 {
-    margin-left: 13%;
-    margin-bottom: 0;
-    text-align: left;
-    font-size: 22px;
-    color: $brand-brown;
-    line-height: 45px;
-    font-weight: 600;
+    margin: 20px;
+    color: white;
+    font-weight: 500;
+    letter-spacing: 10px;
   }
-}
+  .down-arrow {
 
-@media(max-width: 1200px) {
-  .surbanner {
-    height: auto;
-    min-height: 90px;
-    h1 {
-      font-size: 18px;
-      line-height: 35px;
-    }
-  }
-}
-
-@media(max-width: 996px) {
-  .surbanner h1 {
-    font-size: 16px;
-  }
-}
-
-@media(max-width: 850px) {
-  .surbanner h1 {
-    font-size: 14px;
-  }
-  .slider-image h1 {
-    text-align: left;
   }
 }
 
 @media(max-width: 767px) {
-  .surbanner {
-    display: none;
-  }
   .slider-image h1 {
     font-size: 26px;
   }
