--- a/src/styles/config/_fonts.scss
+++ b/src/styles/config/_fonts.scss
@@ -1,15 +1,17 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,500,,600,700|Raleway:400,100,300,700,500");
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
 html, main, body, h1, h2, h3, h4, h5, h6, p {
-  font-family: 'Open Sans';
+  font-family: 'Source Sans Pro', serif;
 }
 
 // H1s
-h1 { font-size: 36px; text-align: center;}
+h1 { font-size: 40px; text-align: center;}
 
 // H2s
 h2 { font-size: 32px; text-align: center;}
 
 // H3s
-h3 { font-size: 22px; text-align: center;}
+h3 { font-size: 24px; text-align: center;}
+
+p { font-size: 18px; text-align: center;}
