desktop version without animation done

--- a/src/styles/components/_team.scss
+++ b/src/styles/components/_team.scss
@@ -1,77 +1,6 @@
-.team {
-  // min-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  h2 {
-    font-style: italic;
-    font-weight: 600;
-    color: $brand-brown;
-    margin: 40px 0;
-  }
-  .team-card2 {
-    flex-direction: row-reverse;
-    padding-left: 2%;
-  }
-  .team-card {
-    display: flex;
-    .team-card-content {
-      position: relative;
-      margin: 40px 0;
-    }
-    h3 {
-      font-weight: 600;
-      color: $brand-color;
-      font-size: 24px;
-      text-align: left;
-    }
-    h4 {
-      font-style: italic;
-      font-weight: 600;
-      color: $brand-brown;
-      font-size: 18px;
-      line-height: 23px;
-    }
-    p {
-      margin: 0;
-      line-height: 28px;
-    }
-    .contact-link {
-      text-decoration: none;
-      color: $brand-color;
-      font-weight: 600;
-      &:hover {
-        color: $brand-brown;
-      }
-    }
-  }
-  .team-limit {
-    height: 1px;
-    width: 80%;
-    background-color: $brand-brown;
-    margin: auto;
-    margin-bottom: 20px;
-  }
-}
-
-.team-2-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  height: 500px;
-}
-
-@media(max-width: 550px) {
-  .team-card-content {
-    h3 {
-      font-size: 22px !important;
-      margin-top: 50px !important;
-    }
-    h4 {
-      font-size: 15px !important;
-    }
-    p {
-      font-size: 14px;
-    }
-  }
+#team {
+  letter-spacing: 5px;
+  color: white;
+  text-align: center;
+  font-weight: 500;
 }
