--- a/src/styles/config/_bootstrap_variables.scss
+++ b/src/styles/config/_bootstrap_variables.scss
@@ -1,9 +1,6 @@
-// General style
-$body-bg:                 white;
-
 // Colors
 $gray-base:       $light-grey;
-$brand-primary:   $brand-color;
+$brand-primary:   $brand-blue;
 $brand-success:   $green;
 $brand-info:      $yellow;
 $brand-danger:    $red;
@@ -13,3 +10,4 @@ $brand-warning:   $orange;
 $border-radius-base:  2px;
 $border-radius-large: 2px;
 $border-radius-small: 2px;
+
