--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,107 +1,132 @@
 .footer {
-  border-top: 4px solid $brand-color;
-  height: 100px;
+  background: linear-gradient(90deg, #003395 -14.86%, rgba(0, 51, 149, 0.41) 100%), #FFFFFF;
+  height: 150px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
   p {
-    margin: 0;
+    color: white;
     font-size: 16px;
-    font-weight: 600;
+    margin-bottom: 10px;
   }
-  .footer-logo {
-    margin-left: 15%;
-  }
-  .footer-content {
-    display: flex;
-    height: 100px;
-    .footer-content-left {
-      height: 100px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      padding-right: 30px;
-    }
-    .footer-content-right {
-      height: 100px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      padding-right: 30px;
-      a {
-        color: black;
-        text-decoration: none;
-        font-weight: 600;
-        height: auto;
-        &:hover {
-          color: $brand-color;
-        }
-      }
-    }
-  }
-  .footer-icon {
-    margin-right: 15px;
+  .margin-footer-right {
+    margin-right: 60px;
   }
 }
 
-@media(max-width: 1100px) {
-  .footer .footer-logo {
-    margin-left: 8%;
+.link-footer {
+  a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+    &:hover {
+      color: $brand-yellow;
+      text-decoration: none;
+    }
   }
 }
+//   border-top: 4px solid $brand-blue;
+//   height: 100px;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   p {
+//     margin: 0;
+//     font-size: 16px;
+//     font-weight: 600;
+//   }
+//   .footer-logo {
+//     margin-left: 15%;
+//   }
+//   .footer-content {
+//     display: flex;
+//     height: 100px;
+//     .footer-content-left {
+//       height: 100px;
+//       display: flex;
+//       flex-direction: column;
+//       justify-content: space-evenly;
+//       padding-right: 30px;
+//     }
+//     .footer-content-right {
+//       height: 100px;
+//       display: flex;
+//       flex-direction: column;
+//       justify-content: space-evenly;
+//       padding-right: 30px;
+//       a {
+//         color: black;
+//         text-decoration: none;
+//         font-weight: 600;
+//         height: auto;
+//         &:hover {
+//           color: $brand-blue;
+//         }
+//       }
+//     }
+//   }
+//   .footer-icon {
+//     margin-right: 15px;
+//   }
+// }
 
-@media(max-width: 920px) {
-  .footer .footer-logo {
-    margin-left: 3%;
-    .gatsby-image-wrapper {
-      width: 300px !important;
-      img {
-        width: 300px !important;
-      }
-    }
-  }
-}
+// @media(max-width: 1100px) {
+//   .footer .footer-logo {
+//     margin-left: 8%;
+//   }
+// }
 
-@media(max-width: 767px) {
-  .footer .footer-logo {
-    .gatsby-image-wrapper {
-      width: 250px !important;
-      img {
-        width: 250px !important;
-      }
-    }
-  }
-  .footer-content p {
-    font-size: 15px;
-  }
-  #footer .footer-wrapper {
-    background-image: none !important;
-    background-color: $brand-color !important;
-  }
-}
+// @media(max-width: 920px) {
+//   .footer .footer-logo {
+//     margin-left: 3%;
+//     .gatsby-image-wrapper {
+//       width: 300px !important;
+//       img {
+//         width: 300px !important;
+//       }
+//     }
+//   }
+// }
 
-@media(max-width: 767px) {
-  #footer .footer-wrapper {
-    flex-direction: column;
-  }
-  .footer .footer-logo {
-    .gatsby-image-wrapper {
-      width: 300px !important;
-      img {
-        width: 300px !important;
-      }
-    }
-  }
-  #footer {
-    height: auto;
-    .background-footer {
-      height: auto !important;
-    }
-  }
-}
-@media(max-width: 420px) {
-  .footer-content {
-    flex-direction: column;
-    height: auto !important;
-  }
-}
+// @media(max-width: 767px) {
+//   .footer .footer-logo {
+//     .gatsby-image-wrapper {
+//       width: 250px !important;
+//       img {
+//         width: 250px !important;
+//       }
+//     }
+//   }
+//   .footer-content p {
+//     font-size: 15px;
+//   }
+//   #footer .footer-wrapper {
+//     background-image: none !important;
+//     background-color: $brand-blue !important;
+//   }
+// }
+
+// @media(max-width: 767px) {
+//   #footer .footer-wrapper {
+//     flex-direction: column;
+//   }
+//   .footer .footer-logo {
+//     .gatsby-image-wrapper {
+//       width: 300px !important;
+//       img {
+//         width: 300px !important;
+//       }
+//     }
+//   }
+//   #footer {
+//     height: auto;
+//     .background-footer {
+//       height: auto !important;
+//     }
+//   }
+// }
+// @media(max-width: 420px) {
+//   .footer-content {
+//     flex-direction: column;
+//     height: auto !important;
+//   }
+// }
