--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -29,7 +29,7 @@
 
 .header-links a.active {
   display: flex;
-  color: $brand-brown;
+  color: $brand-yellow;
 }
 
 .active-menu {
@@ -70,7 +70,7 @@ a {
 }
 
 .colored-link {
-  color: $brand-brown !important;
+  color: $brand-yellow !important;
 }
 
 #nav-icon1 {
