--- a/src/styles/components/_mentions.scss
+++ b/src/styles/components/_mentions.scss
@@ -1,18 +1,18 @@
 .mentions {
   h1 {
-    color: $brand-color;
+    color: $brand-blue;
     font-weight: 600;
   }
   h2 {
     text-align: left;
     font-size: 28px;
-    color: $brand-brown;
+    color: $brand-yellow;
     margin: 30px 0;
   }
   h3 {
     text-align: left;
     font-size: 22px;
-    color: $brand-darkgreen;
+    color: $brand-blue;
     margin: 20px 0;
   }
 }
