--- a/src/styles/config/_fonts.scss
+++ b/src/styles/config/_fonts.scss
@@ -9,9 +9,10 @@ html, main, body, h1, h2, h3, h4, h5, h6, p {
 h1 { font-size: 40px; text-align: center;}
 
 // H2s
-h2 { font-size: 32px; text-align: center;}
+h2 { font-size: 32px; text-align: left; font-weight: 600; color: $brand-blue }
 
 // H3s
-h3 { font-size: 24px; text-align: center;}
+h3 { font-size: 24px; text-align: center }
 
-p { font-size: 18px; text-align: center;}
+// p
+p { font-size: 18px; text-align: left;}
