Try navbar follow scroll

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -11,9 +11,7 @@
 @import 'implantations';
 @import 'team';
 
-// #who, #need, #activities, #team {
-//   padding-top: 80px;
-//   margin-top: -80px;
-// }
-
-// TODO => Scroll truc sur TIL
+#history, #implantations, #services, #team {
+  padding-top: 80px;
+  margin-top: -80px;
+}
