--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -24,3 +24,12 @@
     }
   }
 }
+
+@media(max-width: 576px) {
+  #footer {
+    height: auto;
+    .left-part {
+      height: 50px !important;
+    }
+  }
+}
