--- a/src/styles/components/_team.scss
+++ b/src/styles/components/_team.scss
@@ -3,4 +3,30 @@
   color: white;
   text-align: center;
   font-weight: 500;
+  .gatsby-image-wrapper {
+    width: 300px;
+    img {
+      width: 300px;
+    }
+  }
+}
+
+@media(max-width: 1200px) {
+  #team .gatsby-image-wrapper {
+    width: 250px;
+    img {
+      width: 250px;
+    }
+  }
+}
+
+@media(max-width: 768px) {
+  #team {
+    .gatsby-image-wrapper {
+      width: 280px;
+      img {
+        width: 280px;
+      }
+    }
+  }
 }
