--- a/src/styles/components/_utilities.scss
+++ b/src/styles/components/_utilities.scss
@@ -2,10 +2,6 @@
   color: transparent;
 }
 
-.laroute-container-xl {
-  width: 1300px;
-}
-
 .mb-laroute {
   margin-bottom: 60px;
 }
@@ -19,3 +15,11 @@
   align-items: center;
   justify-content: center;
 }
+
+.laroute-container-xl { width: 1300px; }
+@media(max-width: 1400px) { .laroute-container-xl { width: 1100px; } }
+@media(max-width: 1300px) { .laroute-container-xl { width: 1000px; } }
+@media(max-width: 1200px) { .laroute-container-xl { width: 900px; } }
+@media(max-width: 1100px) { .laroute-container-xl { width: 800px; } }
+@media(max-width: 992px) { .laroute-container-xl { width: 650px; } }
+@media(max-width: 762px) { .laroute-container-xl { max-width: 95%; } }
