--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -18,6 +18,9 @@
   .header-links a {
     color: $brand-blue;
   }
+  span {
+    background-color: $brand-blue !important;
+  }
 }
 
 .navbar-collapse {
@@ -177,7 +180,7 @@ a {
   }
 
   #nav-icon1 span:nth-child(3) {
-    top: 26px;
+    top: 28px;
   }
 
   #nav-icon1.open span:nth-child(1) {
